// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should capture Dropdown primitive snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "items": [
      {
        "icon": "pencil",
        "id": "edit",
        "label": "Edit",
        "onClick": "edit_handler",
      },
      {
        "icon": "trash",
        "id": "delete",
        "label": "Delete",
        "onClick": "delete_handler",
      },
    ],
    "trigger": {
      "children": [],
      "isLeafNode": false,
      "props": {
        "disabled": false,
        "size": "default",
        "variant": "outline",
      },
      "renderStrategy": "react",
      "type": "Button",
    },
  },
  "renderStrategy": "react",
  "type": "Dropdown",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should capture Dropdown with single item snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "items": [
      {
        "id": "action",
        "label": "Action",
      },
    ],
  },
  "renderStrategy": "react",
  "type": "Dropdown",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should capture List primitive snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "items": [
      {
        "data": "Item 1",
        "id": "1",
      },
      {
        "data": "Item 2",
        "id": "2",
      },
      {
        "data": "Item 3",
        "id": "3",
      },
    ],
    "renderItem": "render_list_item_handler",
    "virtualized": false,
  },
  "renderStrategy": "react",
  "type": "List",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should capture Modal primitive snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "onClose": "close_modal_handler",
    "open": true,
    "size": "lg",
    "title": "Confirm Action",
  },
  "renderStrategy": "react",
  "type": "Modal",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should capture Tabs primitive snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "activeTab": "tab1",
    "onTabChange": "tab_change_handler",
    "tabs": [
      {
        "icon": "file",
        "id": "tab1",
        "label": "First Tab",
      },
      {
        "id": "tab2",
        "label": "Second Tab",
      },
      {
        "icon": "settings",
        "id": "tab3",
        "label": "Third Tab",
      },
    ],
  },
  "renderStrategy": "react",
  "type": "Tabs",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should capture Tabs with different active tab snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "activeTab": "t2",
    "tabs": [
      {
        "id": "t1",
        "label": "Tab 1",
      },
      {
        "id": "t2",
        "label": "Tab 2",
      },
    ],
  },
  "renderStrategy": "react",
  "type": "Tabs",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should capture Tooltip primitive snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "content": "Click to save",
    "position": "bottom",
  },
  "renderStrategy": "react",
  "type": "Tooltip",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should capture Tooltip with different positions snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "content": "Top tooltip",
    "position": "top",
  },
  "renderStrategy": "react",
  "type": "Tooltip",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should capture Tooltip with different positions snapshot 2`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "content": "Left tooltip",
    "position": "left",
  },
  "renderStrategy": "react",
  "type": "Tooltip",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should capture Tooltip with different positions snapshot 3`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "content": "Right tooltip",
    "position": "right",
  },
  "renderStrategy": "react",
  "type": "Tooltip",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should capture closed Modal snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "open": false,
    "size": "md",
    "title": "Closed Modal",
  },
  "renderStrategy": "react",
  "type": "Modal",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should capture empty Dropdown snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "items": [],
  },
  "renderStrategy": "react",
  "type": "Dropdown",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should capture empty List snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "items": [],
    "virtualized": false,
  },
  "renderStrategy": "react",
  "type": "List",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should capture empty Tabs snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "tabs": [],
  },
  "renderStrategy": "react",
  "type": "Tabs",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should capture small Modal snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "open": true,
    "size": "sm",
    "title": "Small Modal",
  },
  "renderStrategy": "react",
  "type": "Modal",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should capture virtualized List snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "items": [
      {
        "data": "A",
        "id": "a",
      },
    ],
    "virtualized": true,
  },
  "renderStrategy": "react",
  "type": "List",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should render Dropdown primitive to DOM 1`] = `
<div
  data-testid="mock-dropdown"
  data-type="Dropdown"
  items="[object Object]"
/>
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should render List primitive to DOM 1`] = `
<div
  data-testid="mock-list"
  data-type="List"
  items="[object Object]"
/>
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should render Modal primitive to DOM 1`] = `
<div
  data-testid="mock-modal"
  data-type="Modal"
  open=""
  title="Test Modal"
/>
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should render Tabs primitive to DOM 1`] = `
<div
  activetab="tab"
  data-testid="mock-tabs"
  data-type="Tabs"
  tabs="[object Object]"
/>
`;

exports[`PrimitiveRenderer Snapshot Tests > Complex Primitives (Requirement 1.3) > should render Tooltip primitive to DOM 1`] = `
<div
  content="Test tooltip"
  data-testid="mock-tooltip"
  data-type="Tooltip"
  position="top"
/>
`;

exports[`PrimitiveRenderer Snapshot Tests > Edge Cases > should handle deeply nested structure (4 levels) 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "isLeafNode": false,
              "props": {
                "className": "level-4",
                "disabled": false,
                "size": "default",
                "variant": "default",
              },
              "renderStrategy": "react",
              "type": "Button",
            },
          ],
          "isLeafNode": false,
          "props": {
            "className": "level-3",
            "collapsible": false,
            "defaultCollapsed": false,
          },
          "renderStrategy": "react",
          "type": "Panel",
        },
      ],
      "isLeafNode": false,
      "props": {
        "align": "stretch",
        "className": "level-2",
        "justify": "start",
        "wrap": false,
      },
      "renderStrategy": "react",
      "type": "Flex",
    },
  ],
  "isLeafNode": false,
  "props": {
    "className": "level-1",
    "direction": "column",
    "gap": 0,
  },
  "renderStrategy": "react",
  "type": "Container",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Edge Cases > should handle primitive with empty props 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "direction": "column",
    "gap": 0,
  },
  "renderStrategy": "react",
  "type": "Container",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Edge Cases > should handle sibling primitives at same level 1`] = `
{
  "children": [
    {
      "children": [],
      "isLeafNode": false,
      "props": {
        "className": "btn-0",
        "disabled": false,
        "size": "default",
        "variant": "default",
      },
      "renderStrategy": "react",
      "type": "Button",
    },
    {
      "children": [],
      "isLeafNode": false,
      "props": {
        "className": "btn-1",
        "disabled": false,
        "size": "default",
        "variant": "default",
      },
      "renderStrategy": "react",
      "type": "Button",
    },
    {
      "children": [],
      "isLeafNode": false,
      "props": {
        "className": "btn-2",
        "disabled": false,
        "size": "default",
        "variant": "default",
      },
      "renderStrategy": "react",
      "type": "Button",
    },
    {
      "children": [],
      "isLeafNode": false,
      "props": {
        "className": "btn-3",
        "disabled": false,
        "size": "default",
        "variant": "default",
      },
      "renderStrategy": "react",
      "type": "Button",
    },
    {
      "children": [],
      "isLeafNode": false,
      "props": {
        "className": "btn-4",
        "disabled": false,
        "size": "default",
        "variant": "default",
      },
      "renderStrategy": "react",
      "type": "Button",
    },
  ],
  "isLeafNode": false,
  "props": {
    "direction": "row",
    "gap": 0,
  },
  "renderStrategy": "react",
  "type": "Container",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > ErrorBoundary Fallback (Requirement 1.6) > should capture ErrorBoundary default fallback snapshot 1`] = `
<div
  class="rounded-xl border text-card-foreground shadow border-destructive bg-destructive/10"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <h3
      class="font-semibold leading-none tracking-tight text-destructive"
    >
      Something went wrong
    </h3>
    <p
      class="text-sm text-muted-foreground"
    >
      Test error for snapshot
    </p>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      data-state="closed"
    >
      <button
        aria-controls="radix-«r0»"
        aria-expanded="false"
        class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-8 rounded-md px-3 text-xs"
        data-state="closed"
        type="button"
      >
        Error details
      </button>
      <div
        data-state="closed"
        hidden=""
        id="radix-«r0»"
        style=""
      />
    </div>
  </div>
  <div
    class="flex items-center p-6 pt-0"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-destructive text-destructive-foreground shadow-sm hover:bg-destructive/90 h-9 px-4 py-2"
    >
      Try again
    </button>
  </div>
</div>
`;

exports[`PrimitiveRenderer Snapshot Tests > ErrorBoundary Fallback (Requirement 1.6) > should capture ErrorBoundary error details section snapshot 1`] = `
<div
  class="rounded-xl border text-card-foreground shadow border-destructive bg-destructive/10"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <h3
      class="font-semibold leading-none tracking-tight text-destructive"
    >
      Something went wrong
    </h3>
    <p
      class="text-sm text-muted-foreground"
    >
      Test error for snapshot
    </p>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      data-state="closed"
    >
      <button
        aria-controls="radix-«r4»"
        aria-expanded="false"
        class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-8 rounded-md px-3 text-xs"
        data-state="closed"
        type="button"
      >
        Error details
      </button>
      <div
        data-state="closed"
        hidden=""
        id="radix-«r4»"
        style=""
      />
    </div>
  </div>
  <div
    class="flex items-center p-6 pt-0"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-destructive text-destructive-foreground shadow-sm hover:bg-destructive/90 h-9 px-4 py-2"
    >
      Try again
    </button>
  </div>
</div>
`;

exports[`PrimitiveRenderer Snapshot Tests > ErrorBoundary Fallback (Requirement 1.6) > should capture ErrorBoundary fallback with error details 1`] = `
<div
  class="rounded-xl border text-card-foreground shadow border-destructive bg-destructive/10"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <h3
      class="font-semibold leading-none tracking-tight text-destructive"
    >
      Something went wrong
    </h3>
    <p
      class="text-sm text-muted-foreground"
    >
      Test error for snapshot
    </p>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      data-state="closed"
    >
      <button
        aria-controls="radix-«r1»"
        aria-expanded="false"
        class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-8 rounded-md px-3 text-xs"
        data-state="closed"
        type="button"
      >
        Error details
      </button>
      <div
        data-state="closed"
        hidden=""
        id="radix-«r1»"
        style=""
      />
    </div>
  </div>
  <div
    class="flex items-center p-6 pt-0"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-destructive text-destructive-foreground shadow-sm hover:bg-destructive/90 h-9 px-4 py-2"
    >
      Try again
    </button>
  </div>
</div>
`;

exports[`PrimitiveRenderer Snapshot Tests > ErrorBoundary Fallback (Requirement 1.6) > should capture ErrorBoundary retry button snapshot 1`] = `
<div
  class="rounded-xl border text-card-foreground shadow border-destructive bg-destructive/10"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <h3
      class="font-semibold leading-none tracking-tight text-destructive"
    >
      Something went wrong
    </h3>
    <p
      class="text-sm text-muted-foreground"
    >
      Test error for snapshot
    </p>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      data-state="closed"
    >
      <button
        aria-controls="radix-«r2»"
        aria-expanded="false"
        class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-8 rounded-md px-3 text-xs"
        data-state="closed"
        type="button"
      >
        Error details
      </button>
      <div
        data-state="closed"
        hidden=""
        id="radix-«r2»"
        style=""
      />
    </div>
  </div>
  <div
    class="flex items-center p-6 pt-0"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-destructive text-destructive-foreground shadow-sm hover:bg-destructive/90 h-9 px-4 py-2"
    >
      Try again
    </button>
  </div>
</div>
`;

exports[`PrimitiveRenderer Snapshot Tests > ErrorBoundary Fallback (Requirement 1.6) > should capture ErrorBoundary with componentName prop snapshot 1`] = `
<div
  class="rounded-xl border text-card-foreground shadow border-destructive bg-destructive/10"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <h3
      class="font-semibold leading-none tracking-tight text-destructive"
    >
      Something went wrong
    </h3>
    <p
      class="text-sm text-muted-foreground"
    >
      Test error for snapshot
    </p>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      data-state="closed"
    >
      <button
        aria-controls="radix-«r3»"
        aria-expanded="false"
        class="inline-flex items-center justify-center whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 hover:bg-accent hover:text-accent-foreground h-8 rounded-md px-3 text-xs"
        data-state="closed"
        type="button"
      >
        Error details
      </button>
      <div
        data-state="closed"
        hidden=""
        id="radix-«r3»"
        style=""
      />
    </div>
  </div>
  <div
    class="flex items-center p-6 pt-0"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 bg-destructive text-destructive-foreground shadow-sm hover:bg-destructive/90 h-9 px-4 py-2"
    >
      Try again
    </button>
  </div>
</div>
`;

exports[`PrimitiveRenderer Snapshot Tests > ErrorBoundary Fallback (Requirement 1.6) > should capture ErrorBoundary with custom fallback snapshot 1`] = `
<div
  class="custom-error-fallback"
>
  <h2>
    Custom Error UI
  </h2>
  <p>
    Error: 
    Test error for snapshot
  </p>
  <button>
    Retry
  </button>
</div>
`;

exports[`PrimitiveRenderer Snapshot Tests > ErrorBoundary Fallback (Requirement 1.6) > should capture ErrorBoundary wrapping PrimitiveRenderer snapshot 1`] = `<div />`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should capture Button primitive snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "disabled": false,
    "onClick": "click_handler",
    "size": "lg",
    "variant": "primary",
  },
  "renderStrategy": "react",
  "type": "Button",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should capture Button with default props snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "disabled": false,
    "size": "default",
    "variant": "default",
  },
  "renderStrategy": "react",
  "type": "Button",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should capture Checkbox primitive snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "checked": true,
    "disabled": false,
    "label": "Accept terms",
    "onChange": "terms_handler",
  },
  "renderStrategy": "react",
  "type": "Checkbox",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should capture Icon primitive snapshot 1`] = `
{
  "children": [],
  "isLeafNode": true,
  "props": {
    "color": "#333",
    "name": "file",
    "size": 16,
  },
  "renderStrategy": "react",
  "type": "Icon",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should capture Icon with default size snapshot 1`] = `
{
  "children": [],
  "isLeafNode": true,
  "props": {
    "name": "folder",
    "size": 24,
  },
  "renderStrategy": "react",
  "type": "Icon",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should capture Input primitive snapshot 1`] = `
{
  "children": [],
  "isLeafNode": true,
  "props": {
    "disabled": false,
    "onChange": "email_handler",
    "placeholder": "Enter email",
    "type": "email",
    "value": "",
  },
  "renderStrategy": "react",
  "type": "Input",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should capture Input with value snapshot 1`] = `
{
  "children": [],
  "isLeafNode": true,
  "props": {
    "disabled": false,
    "type": "text",
    "value": "test value",
  },
  "renderStrategy": "react",
  "type": "Input",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should capture Select primitive snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "disabled": false,
    "onChange": "select_handler",
    "options": [
      {
        "label": "Option A",
        "value": "a",
      },
      {
        "label": "Option B",
        "value": "b",
      },
    ],
    "value": "a",
  },
  "renderStrategy": "react",
  "type": "Select",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should capture Select with placeholder snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "disabled": false,
    "options": [
      {
        "label": "First",
        "value": "1",
      },
    ],
    "placeholder": "Select an option",
  },
  "renderStrategy": "react",
  "type": "Select",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should capture Text primitive snapshot 1`] = `
{
  "children": [],
  "isLeafNode": true,
  "props": {
    "content": "Hello World",
    "size": "lg",
    "variant": "heading",
    "weight": "bold",
  },
  "renderStrategy": "react",
  "type": "Text",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should capture Text with default props snapshot 1`] = `
{
  "children": [],
  "isLeafNode": true,
  "props": {
    "content": "Default text",
    "size": "md",
    "variant": "body",
    "weight": "normal",
  },
  "renderStrategy": "react",
  "type": "Text",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should capture disabled Button snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "disabled": true,
    "size": "default",
    "variant": "destructive",
  },
  "renderStrategy": "react",
  "type": "Button",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should capture disabled Checkbox snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "checked": true,
    "disabled": true,
  },
  "renderStrategy": "react",
  "type": "Checkbox",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should capture disabled Input snapshot 1`] = `
{
  "children": [],
  "isLeafNode": true,
  "props": {
    "disabled": true,
    "type": "password",
    "value": "",
  },
  "renderStrategy": "react",
  "type": "Input",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should capture disabled Select snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "disabled": true,
    "options": [],
  },
  "renderStrategy": "react",
  "type": "Select",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should capture unchecked Checkbox snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "checked": false,
    "disabled": false,
    "label": "Subscribe",
  },
  "renderStrategy": "react",
  "type": "Checkbox",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should render Button primitive to DOM 1`] = `
<div
  data-testid="mock-button"
  data-type="Button"
  variant="outline"
/>
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should render Checkbox primitive to DOM 1`] = `
<div
  data-testid="mock-checkbox"
  data-type="Checkbox"
  label="Test checkbox"
/>
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should render Icon primitive to DOM 1`] = `
<div
  data-testid="mock-icon"
  data-type="Icon"
  name="star"
  size="20"
/>
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should render Input primitive to DOM 1`] = `
<div
  data-testid="mock-input"
  data-type="Input"
  placeholder="Type here"
  type="text"
  value=""
/>
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should render Select primitive to DOM 1`] = `
<div
  data-testid="mock-select"
  data-type="Select"
  options="[object Object]"
  value="x"
/>
`;

exports[`PrimitiveRenderer Snapshot Tests > Interactive Primitives (Requirement 1.2) > should render Text primitive to DOM 1`] = `
<div
  content="Rendered text"
  data-testid="mock-text"
  data-type="Text"
  variant="body"
  weight="normal"
/>
`;

exports[`PrimitiveRenderer Snapshot Tests > Layout Primitives (Requirement 1.1) > should capture Container primitive snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "className": "test-container",
    "direction": "row",
    "gap": 8,
  },
  "renderStrategy": "react",
  "type": "Container",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Layout Primitives (Requirement 1.1) > should capture Container with default props snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "direction": "column",
    "gap": 0,
  },
  "renderStrategy": "react",
  "type": "Container",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Layout Primitives (Requirement 1.1) > should capture Divider primitive snapshot 1`] = `
{
  "children": [],
  "isLeafNode": true,
  "props": {
    "className": "test-divider",
    "orientation": "horizontal",
  },
  "renderStrategy": "react",
  "type": "Divider",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Layout Primitives (Requirement 1.1) > should capture Flex primitive snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "align": "center",
    "className": "test-flex",
    "justify": "center",
    "wrap": true,
  },
  "renderStrategy": "react",
  "type": "Flex",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Layout Primitives (Requirement 1.1) > should capture Flex with default props snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "align": "stretch",
    "justify": "start",
    "wrap": false,
  },
  "renderStrategy": "react",
  "type": "Flex",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Layout Primitives (Requirement 1.1) > should capture Grid primitive snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "className": "test-grid",
    "columns": 3,
    "gap": 16,
  },
  "renderStrategy": "react",
  "type": "Grid",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Layout Primitives (Requirement 1.1) > should capture Grid with rows snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "columns": 2,
    "gap": 8,
    "rows": 4,
  },
  "renderStrategy": "react",
  "type": "Grid",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Layout Primitives (Requirement 1.1) > should capture Panel collapsed snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "collapsible": true,
    "defaultCollapsed": true,
    "title": "Collapsed Panel",
  },
  "renderStrategy": "react",
  "type": "Panel",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Layout Primitives (Requirement 1.1) > should capture Panel primitive snapshot 1`] = `
{
  "children": [],
  "isLeafNode": false,
  "props": {
    "collapsible": true,
    "defaultCollapsed": false,
    "title": "Settings",
  },
  "renderStrategy": "react",
  "type": "Panel",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Layout Primitives (Requirement 1.1) > should capture vertical Divider snapshot 1`] = `
{
  "children": [],
  "isLeafNode": true,
  "props": {
    "orientation": "vertical",
  },
  "renderStrategy": "react",
  "type": "Divider",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Layout Primitives (Requirement 1.1) > should render Container primitive to DOM 1`] = `
<div
  data-testid="mock-container"
  data-type="Container"
  direction="row"
  gap="8"
/>
`;

exports[`PrimitiveRenderer Snapshot Tests > Layout Primitives (Requirement 1.1) > should render Divider primitive to DOM 1`] = `
<div
  data-testid="mock-divider"
  data-type="Divider"
  orientation="horizontal"
/>
`;

exports[`PrimitiveRenderer Snapshot Tests > Layout Primitives (Requirement 1.1) > should render Flex primitive to DOM 1`] = `
<div
  align="center"
  data-testid="mock-flex"
  data-type="Flex"
  justify="space-between"
/>
`;

exports[`PrimitiveRenderer Snapshot Tests > Layout Primitives (Requirement 1.1) > should render Grid primitive to DOM 1`] = `
<div
  columns="4"
  data-testid="mock-grid"
  data-type="Grid"
  gap="12"
/>
`;

exports[`PrimitiveRenderer Snapshot Tests > Layout Primitives (Requirement 1.1) > should render Panel primitive to DOM 1`] = `
<div
  data-testid="mock-panel"
  data-type="Panel"
  title="Test Panel"
/>
`;

exports[`PrimitiveRenderer Snapshot Tests > Nested Primitive Trees (Requirement 1.4) > should capture 2-level nested tree snapshot 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "isLeafNode": false,
          "props": {
            "disabled": false,
            "size": "default",
            "variant": "primary",
          },
          "renderStrategy": "react",
          "type": "Button",
        },
        {
          "children": [],
          "isLeafNode": false,
          "props": {
            "disabled": false,
            "size": "default",
            "variant": "secondary",
          },
          "renderStrategy": "react",
          "type": "Button",
        },
      ],
      "isLeafNode": false,
      "props": {
        "align": "stretch",
        "justify": "space-between",
        "wrap": false,
      },
      "renderStrategy": "react",
      "type": "Flex",
    },
  ],
  "isLeafNode": false,
  "props": {
    "direction": "column",
    "gap": 8,
  },
  "renderStrategy": "react",
  "type": "Container",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Nested Primitive Trees (Requirement 1.4) > should capture 3-level nested tree snapshot 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "isLeafNode": true,
              "props": {
                "name": "file",
                "size": 16,
              },
              "renderStrategy": "react",
              "type": "Icon",
            },
            {
              "children": [],
              "isLeafNode": true,
              "props": {
                "content": "File name",
                "size": "md",
                "variant": "body",
                "weight": "normal",
              },
              "renderStrategy": "react",
              "type": "Text",
            },
          ],
          "isLeafNode": false,
          "props": {
            "align": "center",
            "justify": "start",
            "wrap": false,
          },
          "renderStrategy": "react",
          "type": "Flex",
        },
        {
          "children": [
            {
              "children": [],
              "isLeafNode": false,
              "props": {
                "disabled": false,
                "size": "sm",
                "variant": "ghost",
              },
              "renderStrategy": "react",
              "type": "Button",
            },
          ],
          "isLeafNode": false,
          "props": {
            "align": "center",
            "justify": "end",
            "wrap": false,
          },
          "renderStrategy": "react",
          "type": "Flex",
        },
      ],
      "isLeafNode": false,
      "props": {
        "direction": "row",
        "gap": 16,
      },
      "renderStrategy": "react",
      "type": "Container",
    },
  ],
  "isLeafNode": false,
  "props": {
    "collapsible": true,
    "defaultCollapsed": false,
    "title": "Main Panel",
  },
  "renderStrategy": "react",
  "type": "Panel",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Nested Primitive Trees (Requirement 1.4) > should capture complex nested structure with mixed primitives 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [
            {
              "children": [],
              "isLeafNode": true,
              "props": {
                "disabled": false,
                "placeholder": "Username",
                "type": "text",
                "value": "",
              },
              "renderStrategy": "react",
              "type": "Input",
            },
            {
              "children": [],
              "isLeafNode": true,
              "props": {
                "disabled": false,
                "placeholder": "Email",
                "type": "email",
                "value": "",
              },
              "renderStrategy": "react",
              "type": "Input",
            },
          ],
          "isLeafNode": false,
          "props": {
            "align": "stretch",
            "direction": "column",
            "gap": 8,
            "justify": "start",
            "wrap": false,
          },
          "renderStrategy": "react",
          "type": "Flex",
        },
        {
          "children": [
            {
              "children": [],
              "isLeafNode": false,
              "props": {
                "checked": true,
                "disabled": false,
                "label": "Option 1",
              },
              "renderStrategy": "react",
              "type": "Checkbox",
            },
            {
              "children": [],
              "isLeafNode": false,
              "props": {
                "checked": false,
                "disabled": false,
                "label": "Option 2",
              },
              "renderStrategy": "react",
              "type": "Checkbox",
            },
          ],
          "isLeafNode": false,
          "props": {
            "align": "stretch",
            "direction": "column",
            "gap": 4,
            "justify": "start",
            "wrap": false,
          },
          "renderStrategy": "react",
          "type": "Flex",
        },
        {
          "children": [
            {
              "children": [],
              "isLeafNode": false,
              "props": {
                "disabled": false,
                "size": "default",
                "variant": "outline",
              },
              "renderStrategy": "react",
              "type": "Button",
            },
            {
              "children": [],
              "isLeafNode": false,
              "props": {
                "disabled": false,
                "size": "default",
                "variant": "primary",
              },
              "renderStrategy": "react",
              "type": "Button",
            },
          ],
          "isLeafNode": false,
          "props": {
            "align": "stretch",
            "gap": 8,
            "justify": "end",
            "wrap": false,
          },
          "renderStrategy": "react",
          "type": "Flex",
        },
      ],
      "isLeafNode": false,
      "props": {
        "direction": "column",
        "gap": 16,
      },
      "renderStrategy": "react",
      "type": "Container",
    },
  ],
  "isLeafNode": false,
  "props": {
    "open": true,
    "size": "lg",
    "title": "Settings",
  },
  "renderStrategy": "react",
  "type": "Modal",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Nested Primitive Trees (Requirement 1.4) > should capture grid with nested items snapshot 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "isLeafNode": true,
          "props": {
            "content": "Content 1",
            "size": "md",
            "variant": "body",
            "weight": "normal",
          },
          "renderStrategy": "react",
          "type": "Text",
        },
      ],
      "isLeafNode": false,
      "props": {
        "collapsible": false,
        "defaultCollapsed": false,
        "title": "Panel 1",
      },
      "renderStrategy": "react",
      "type": "Panel",
    },
    {
      "children": [
        {
          "children": [],
          "isLeafNode": true,
          "props": {
            "content": "Content 2",
            "size": "md",
            "variant": "body",
            "weight": "normal",
          },
          "renderStrategy": "react",
          "type": "Text",
        },
      ],
      "isLeafNode": false,
      "props": {
        "collapsible": false,
        "defaultCollapsed": false,
        "title": "Panel 2",
      },
      "renderStrategy": "react",
      "type": "Panel",
    },
    {
      "children": [
        {
          "children": [],
          "isLeafNode": true,
          "props": {
            "content": "Content 3",
            "size": "md",
            "variant": "body",
            "weight": "normal",
          },
          "renderStrategy": "react",
          "type": "Text",
        },
      ],
      "isLeafNode": false,
      "props": {
        "collapsible": false,
        "defaultCollapsed": false,
        "title": "Panel 3",
      },
      "renderStrategy": "react",
      "type": "Panel",
    },
    {
      "children": [
        {
          "children": [],
          "isLeafNode": true,
          "props": {
            "content": "Content 4",
            "size": "md",
            "variant": "body",
            "weight": "normal",
          },
          "renderStrategy": "react",
          "type": "Text",
        },
      ],
      "isLeafNode": false,
      "props": {
        "collapsible": false,
        "defaultCollapsed": false,
        "title": "Panel 4",
      },
      "renderStrategy": "react",
      "type": "Panel",
    },
  ],
  "isLeafNode": false,
  "props": {
    "columns": 2,
    "gap": 12,
  },
  "renderStrategy": "react",
  "type": "Grid",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Nested Primitive Trees (Requirement 1.4) > should capture serialized snapshot for comparison 1`] = `
"{
  "type": "Container",
  "props": {
    "direction": "row",
    "gap": 0
  },
  "renderStrategy": "react",
  "isLeafNode": false,
  "children": [
    {
      "type": "Button",
      "props": {
        "variant": "outline",
        "size": "default",
        "disabled": false
      },
      "renderStrategy": "react",
      "isLeafNode": false,
      "children": []
    }
  ]
}"
`;

exports[`PrimitiveRenderer Snapshot Tests > Nested Primitive Trees (Requirement 1.4) > should capture tabs with nested content snapshot 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "isLeafNode": true,
          "props": {
            "content": "General settings",
            "size": "md",
            "variant": "body",
            "weight": "normal",
          },
          "renderStrategy": "react",
          "type": "Text",
        },
        {
          "children": [],
          "isLeafNode": true,
          "props": {
            "disabled": false,
            "placeholder": "Name",
            "type": "text",
            "value": "",
          },
          "renderStrategy": "react",
          "type": "Input",
        },
      ],
      "isLeafNode": false,
      "props": {
        "direction": "column",
        "gap": 0,
      },
      "renderStrategy": "react",
      "type": "Container",
    },
    {
      "children": [
        {
          "children": [],
          "isLeafNode": true,
          "props": {
            "content": "Advanced settings",
            "size": "md",
            "variant": "body",
            "weight": "normal",
          },
          "renderStrategy": "react",
          "type": "Text",
        },
        {
          "children": [],
          "isLeafNode": false,
          "props": {
            "checked": false,
            "disabled": false,
            "label": "Enable feature",
          },
          "renderStrategy": "react",
          "type": "Checkbox",
        },
      ],
      "isLeafNode": false,
      "props": {
        "direction": "column",
        "gap": 0,
      },
      "renderStrategy": "react",
      "type": "Container",
    },
  ],
  "isLeafNode": false,
  "props": {
    "activeTab": "general",
    "tabs": [
      {
        "id": "general",
        "label": "General",
      },
      {
        "id": "advanced",
        "label": "Advanced",
      },
    ],
  },
  "renderStrategy": "react",
  "type": "Tabs",
}
`;

exports[`PrimitiveRenderer Snapshot Tests > Nested Primitive Trees (Requirement 1.4) > should render 2-level nested tree to DOM 1`] = `
<div
  data-testid="mock-container"
  data-type="Container"
  direction="row"
  gap="0"
>
  <div
    data-testid="mock-button"
    data-type="Button"
    variant="primary"
  />
  <div
    content="Click me"
    data-testid="mock-text"
    data-type="Text"
    variant="body"
    weight="normal"
  />
</div>
`;

exports[`PrimitiveRenderer Snapshot Tests > Nested Primitive Trees (Requirement 1.4) > should render 3-level nested tree to DOM 1`] = `
<div
  data-testid="mock-panel"
  data-type="Panel"
  title="Nested Panel"
>
  <div
    align="stretch"
    data-testid="mock-flex"
    data-type="Flex"
    justify="center"
  >
    <div
      data-testid="mock-icon"
      data-type="Icon"
      name="star"
      size="24"
    />
  </div>
</div>
`;

exports[`PrimitiveRenderer Snapshot Tests > Nested Primitive Trees (Requirement 1.4) > should verify complete tree structure is captured 1`] = `
{
  "children": [
    {
      "children": [
        {
          "children": [],
          "isLeafNode": false,
          "props": {
            "className": "level2a",
            "disabled": false,
            "size": "default",
            "variant": "primary",
          },
          "renderStrategy": "react",
          "type": "Button",
        },
        {
          "children": [],
          "isLeafNode": true,
          "props": {
            "className": "level2b",
            "content": "Text",
            "size": "md",
            "variant": "body",
            "weight": "normal",
          },
          "renderStrategy": "react",
          "type": "Text",
        },
      ],
      "isLeafNode": false,
      "props": {
        "align": "stretch",
        "className": "level1a",
        "justify": "start",
        "wrap": false,
      },
      "renderStrategy": "react",
      "type": "Flex",
    },
    {
      "children": [
        {
          "children": [],
          "isLeafNode": true,
          "props": {
            "className": "level2c",
            "name": "check",
            "size": 24,
          },
          "renderStrategy": "react",
          "type": "Icon",
        },
      ],
      "isLeafNode": false,
      "props": {
        "align": "stretch",
        "className": "level1b",
        "justify": "end",
        "wrap": false,
      },
      "renderStrategy": "react",
      "type": "Flex",
    },
  ],
  "isLeafNode": false,
  "props": {
    "className": "root",
    "direction": "column",
    "gap": 0,
  },
  "renderStrategy": "react",
  "type": "Container",
}
`;
